Version 0.7.0~dev

	* Add audio_format property to AVInfo class.

Version 0.6.0 Released on 2012/08/06

	* Implement _setup method in parent class (Worker).
	* AVInfo class code cleanup.
	* Ignore empty string as argument value in Worker.get_args.
	* Add worker configuration system, closes: #5764.
	* Update ffmpeg worker API.
	* Make ffmpeg worker override output files by default.
	* Add set_timecode method to ffmpeg worker.
	* Support demuxing in ffmpeg worker.
	* Remove dependency on sjfs from manzanita rewrap action, closes: #5758.
	* Refactor manzanita rewrap action and remove dependency over mediaparser.
	* Support video copy in ffmpeg worker, refs: #5763.
	* Add set_aspect_ratio to ffmpeg worker, refs: #5763.
	* Support IMX codec in ffmpeg worker, refs: #5763.
	* Support XDCAM HD in ffmpeg worker, refs: #5763.
	* Support MXF muxing in ffmpeg worker, refs: #5763.
	* Support MOV muxing in ffmpeg worker, refs: #5763.
	* Support SD letterboxing in ffmpeg worker, refs: #5763.
	* Add transcode and mux method to ffmpeg worker, refs: #5763.
	* Add omneon workers, refs: #5763.
	* Add transcode action, closes: #5763.
	* Do not execute _finalize method if worker exited abnormally.
	* Remove sleep based loop in Action._execute_worker, closes: #5759.
	* Support GXF muxing in ffmpeg worker.
	* Handle progress in ommcp worker, closes: #5913.
	* Add standard fps attributes to AVInfo class.
	* Support simple MPEG2 transcode in ffmpeg worker, closes: #5898.
	* Support MPEG PS muxing in ffmpeg worker.
	* Support DNxHD codec in ffmpeg worker, closes: #5900.
	* Support PCM codec in ffmpeg worker.
	* Support decoding/encoding threads count selection in ffmpeg worker.
	* Support channel merging/splitting in ffmpeg worker.
	* Support MXF/D10 mapping in ffmpeg worker.
	* Support simple H264 transcode in ffmpeg worker.
	* Support AAC codec in ffmpeg worker.
	* Add qt-faststart worker.
	* Add flvtool2 worker.
	* Support hinting option for FLV, MP4 and MOV containers.