@@ -1,6 +1,7 @@
 Version 0.7.0~dev
 
 	* Add audio_format property to AVInfo class.
+	* Try to keep input audio format in transcode action.
 
 Version 0.6.0 Released on 2012/08/06
 
